Began working on island BG

--- a/client/style.scss
+++ b/client/style.scss
@@ -25,4 +25,15 @@ body {
         color: $dark-blue;
         font-family: 'Josefin Sans';
     }
+
+    .island {
+        position: fixed;
+        bottom: 0;
+        height: 200px;
+        width: 100vw;
+        @media screen and (max-width: 480px) {
+        
+        }
+
+    }
 }
