--- a/client/style.scss
+++ b/client/style.scss
@@ -32,7 +32,7 @@ body {
         height: 40%;
         width: 100vw;
         @media screen and (max-width: 680px) {
-            background-image: url('/assets/Log_Beach.svg');
+            background-image: url('./assets/Log_Beach.svg');
             background-repeat: no-repeat;
             background-size: cover;
         }
