--- a/client/style.scss
+++ b/client/style.scss
@@ -75,3 +75,27 @@ h2 {
         color: $dark-blue;
     }
 }
+#signUp {
+    background-color: $white;
+    border: 1px $mid-blue solid;
+    z-index: 1;
+    max-width: 600px;
+    max-height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 0px 4px 4px $dark-blue;
+    @media screen and (max-width: 680px) {
+        width: 90%;
+        height: 500px;
+    }
+    @media screen and (min-width: 681px) {
+        width: 60%;
+        height: 500px;
+    }
+
+    h2 {
+        color: $dark-blue;
+    }
+}
