--- a/client/style.scss
+++ b/client/style.scss
@@ -53,6 +53,7 @@ h2 {
 
 #logIn {
     background-color: $white;
+    color: $dark-blue;
     border: 1px $mid-blue solid;
     z-index: 1;
     max-width: 600px;
@@ -74,10 +75,45 @@ h2 {
     h2 {
         color: $dark-blue;
     }
+
+    input {
+        border: 1px $mid-blue solid;
+        border-radius: 5px;;
+        padding: 10px;
+        margin-top: 5px;
+        margin-bottom: 15px;
+    }
+
+    label {
+        font-size: 18px;
+    }
+
+    .toggleCard button {
+        margin-top: 2em;
+        background-color: transparent;
+        color: $mid-blue;
+        text-decoration: underline;
+        font-weight: normal;
+    }
+
+    button {
+        background-color: $mid-blue;
+        border: none;
+        padding: 10px 15px;
+        width: 100%;
+        color: $white;
+        font-family: 'Josefin Sans', Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        font-size: 18px;
+        border-radius: 5px;
+    }
+
 }
+
 #signUp {
-    background-color: $white;
-    border: 1px $mid-blue solid;
+    background-color: $mid-blue;
+    color: $white;
+    border: 1px $orange solid;
     z-index: 1;
     max-width: 600px;
     max-height: 70%;
@@ -96,6 +132,38 @@ h2 {
     }
 
     h2 {
-        color: $dark-blue;
+        color: $orange;
+    }
+
+    input {
+        border: 1px $orange solid;
+        border-radius: 5px;;
+        padding: 10px;
+        margin-top: 5px;
+        margin-bottom: 15px;
+    }
+
+    label {
+        font-size: 18px;
+    }
+
+    .toggleCard button {
+        margin-top: 2em;
+        background-color: transparent;
+        color: $white;
+        text-decoration: underline;
+        font-weight: normal;
+    }
+
+    button {
+        background-color: E7AF28;
+        border: none;
+        padding: 10px 15px;
+        width: 100%;
+        color: $white;
+        font-family: 'Josefin Sans', Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        font-size: 18px;
+        border-radius: 5px;
     }
 }
