--- a/client/style.scss
+++ b/client/style.scss
@@ -74,6 +74,8 @@ h2 {
 
     h2 {
         color: $dark-blue;
+        display: flex;
+        justify-content: center;
     }
 
     input {
@@ -133,6 +135,8 @@ h2 {
 
     h2 {
         color: $orange;
+        display: flex;
+        justify-content: center;
     }
 
     input {
@@ -165,5 +169,69 @@ h2 {
         font-weight: bold;
         font-size: 18px;
         border-radius: 5px;
+    }
+}
+
+#mainPage {
+    background-color: $water-blue;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h2 {
+        color: $white
+    }
+
+    button {
+        min-height: 200px;
+        height: 30%;
+        width: 50%;
+        min-width: 300px;
+        background-color: $orange;
+        color: $dark-blue;
+        border: none;
+        border-radius: 5px;
+        font-weight: bold;
+        text-align: left;
+        box-shadow: 0px 4px 4px $dark-blue;
+        margin: 3rem;
+        z-index: 1;
+        padding: 3rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+
+        @media screen and (max-width: 680px) { 
+            font-size: 1.25em;
+            padding: 1.25rem;
+        }
+
+        @media screen and (min-width: 681px) {
+            font-size: 2em;
+            padding: 3rem;
+        }
+    }
+
+    button img {
+        margin: 1rem;
+    }
+
+    .island {
+        position: fixed;
+        bottom: 0;
+        height: 70%;
+        width: 100vw;
+        @media screen and (max-width: 680px) {
+            background-image: url('/assets/Log_Beach.svg');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        @media screen and (min-width: 681px) {
+            background-image: url('/assets/Log_Beach-LG.svg');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     }
 }
